--- a/refereezy-website/frontend/pages/equipos.html
+++ b/refereezy-website/frontend/pages/equipos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Equipos - Refereezy</title>
+    <link rel="stylesheet" href="../style/base.css">
     <link rel="stylesheet" href="../style/equipos.css">
 </head>
 <body>
@@ -65,6 +66,7 @@
             </div>
         </main>
     </div>
+    <script src="../js/base.js"></script>
     <script src="../js/commons.js"></script>
     <script src="../js/equipos.js"></script>
 </body>
