--- a/refereezy-website/frontend/pages/partidos.html
+++ b/refereezy-website/frontend/pages/partidos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Partidos - RefereeZY</title>
+    <link rel="stylesheet" href="../style/base.css">
     <link rel="stylesheet" href="../style/partidos.css">
 </head>
 <body>
@@ -64,6 +65,7 @@
             </div>
         </main>
     </div>
+    <script src="../js/base.js"></script>
     <script src="../js/commons.js"></script>
     <script src="../js/partidos.js"></script>
 </body>
