--- a/refereezy-website/login.html
+++ b/refereezy-website/login.html
@@ -1,4 +1,3 @@
-
 <!-- Login -->
 
 <!DOCTYPE html>
@@ -7,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión - RefereeZY</title>
+    <link rel="stylesheet" href="frontend/style/base.css">
     <link rel="stylesheet" href="frontend/style/login.css">
 </head>
 <body>
@@ -55,6 +55,7 @@
             </div>
         </main>
     </div>
+    <script src="frontend/js/base.js"></script>
     <script src="frontend/js/login.js"></script>
 </body>
 </html>
