--- a/refereezy-website/dashboard.html
+++ b/refereezy-website/dashboard.html
@@ -1,4 +1,3 @@
-
 <!-- Home interna tras el login -->
 
 <!DOCTYPE html>
@@ -7,6 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Panel de Control - Refereezy</title>
+  <link rel="stylesheet" href="frontend/style/base.css" />
   <link rel="stylesheet" href="frontend/style/dashboard.css" />
 </head>
 <body>
@@ -35,17 +35,17 @@
     <p>Selecciona una sección en el menú para empezar.</p>
   </main>
   
+  <script src="frontend/js/base.js"></script>
   <script>
-    const auth_ok = localStorage.getItem("auth_ok")
-    if (!auth_ok) {
-      window.location.href = "./login.html";
-    }
+    // Use base.js checkAuth function to handle authorization
+    document.addEventListener('DOMContentLoaded', () => {
+      const clientId = getClientId();
+      if (!clientId) {
+        window.location.href = "./login.html";
+      }
+    });
     
-    function logout() {
-      localStorage.removeItem("auth_ok");
-      localStorage.removeItem("client_id");
-      window.location.href = "./index.html";
-    }
+    // The logout function is now available from base.js
   </script>
 </body>
 </html>
