--- a/refereezy-website/frontend/pages/jugadores.html
+++ b/refereezy-website/frontend/pages/jugadores.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Jugadores - Refereezy</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="../style/base.css">
     <link rel="stylesheet" href="../style/jugadores.css">
 </head>
 <body>
@@ -117,7 +118,7 @@
     </div>
 
     <!-- Notification container - se añade dinámicamente cuando hay notificaciones -->
-    
+    <script src="../js/base.js"></script>
     <script src="../js/commons.js"></script>
     <script src="../js/listar-jugadores.js"></script>
     <script src="../js/formulario-jugadores.js"></script>
