--- a/refereezy-website/frontend/pages/ver-arbitros.html
+++ b/refereezy-website/frontend/pages/ver-arbitros.html
@@ -60,7 +60,7 @@
             </div>
         </div>
     </div>
-    <script src="../js/commons.js"></script>
+    <script src="../js/base.js"></script>
     <script src="../js/ver-arbitros.js"></script>
 </body>
 </html>
