--- a/refereezy-website/frontend/pages/ver-equipos.html
+++ b/refereezy-website/frontend/pages/ver-equipos.html
@@ -47,7 +47,7 @@
             </div>
         </main>
     </div>
-    <script src="../js/commons.js"></script>
+    <script src="../js/base.js"></script>
     <script src="../js/ver-equipos.js"></script>
 </body>
 </html>
