--- a/refereezy-website/frontend/pages/ver-jugadores.html
+++ b/refereezy-website/frontend/pages/ver-jugadores.html
@@ -50,7 +50,7 @@
             </div>
         </main>
     </div>
-    <script src="../js/commons.js"></script>
+    <script src="../js/base.js"></script>
     <script src="../js/ver-jugadores.js"></script>
 </body>
 </html>
