--- a/refereezy-website/frontend/pages/ver-partidos.html
+++ b/refereezy-website/frontend/pages/ver-partidos.html
@@ -41,7 +41,7 @@
             </div>
         </main>
     </div>
-    <script src="../js/commons.js"></script>
+    <script src="../js/base.js"></script>
     <script src="../js/ver-partidos.js"></script>
 </body>
 </html>
