--- a/refereezy-website/frontend/pages/equipos.html
+++ b/refereezy-website/frontend/pages/equipos.html
@@ -50,7 +50,7 @@
                         <div class="logo-section">
                             <div class="logo-input-container">
                                 <button class="logo-upload-btn">Añadir logo del equipo</button>
-                                <button class="remove-logo-btn">Quitar logo</button>
+                                <button class="remove-logo-btn" style="display: none;">Quitar logo</button>
                             </div>
                             <div class="logo-preview">
                                 <span>Vista previa del logo</span>
