Web matches modified, also API schemas and dml. Modified the matches implementations to a single page. Fixed the old implementation and now it works with the api endpoints. TODO: Ill change the styles because i dont like these

--- a/refereezy-website/frontend/pages/arbitros.html
+++ b/refereezy-website/frontend/pages/arbitros.html
@@ -90,6 +90,6 @@
     </div>
     <script src="../js/base.js"></script>
     <script src="../js/listar-arbitros.js"></script>
-    <script src="../js/formulario-arbitros.js"></script>
+    <script src="../js/crear-arbitros.js"></script>
 </body>
 </html>
