--- a/refereezy-website/frontend/pages/dashboard.html
+++ b/refereezy-website/frontend/pages/dashboard.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Panel de Control - Refereezy</title>
-  <link rel="stylesheet" href="frontend/style/base.css" />
-  <link rel="stylesheet" href="frontend/style/dashboard.css" />
+  <link rel="stylesheet" href="../style/base.css" />
+  <link rel="stylesheet" href="../style/dashboard.css" />
 </head>
 <body>
   <!-- Navigation -->
@@ -18,11 +18,11 @@
             <nav class="dashboard-nav">
                 <div class="nav-logo">Refereezy ⚽</div>
                 <ul class="nav-links">
-                  <li><a href="./frontend/pages/equipos.html">Equipos</a></li>
-                  <li><a href="./frontend/pages/jugadores.html">Jugadores</a></li>
-                  <li><a href="./frontend/pages/arbitros.html">Árbitros</a></li>
-                  <li><a href="./frontend/pages/partidos.html">Partidos</a></li>
-                  <li><a href="./frontend/pages/planes.html">Planes</a></li>
+                  <li><a href="./equipos.html">Equipos</a></li>
+                  <li><a href="./jugadores.html">Jugadores</a></li>
+                  <li><a href="./arbitros.html">Árbitros</a></li>
+                  <li><a href="./partidos.html">Partidos</a></li>
+                  <li><a href="./planes.html">Planes</a></li>
                   <li><a href="#" onclick="logout()">Cerrar sesión</a></li>
                 </ul>
             </nav>
@@ -35,7 +35,7 @@
     <p>Selecciona una sección en el menú para empezar.</p>
   </main>
   
-  <script src="frontend/js/base.js"></script>
+  <script src="../js/base.js"></script>
   <script>
     // Use base.js checkAuth function to handle authorization
     document.addEventListener('DOMContentLoaded', () => {
