--- a/refereezy-website/frontend/pages/jugadores.html
+++ b/refereezy-website/frontend/pages/jugadores.html
@@ -123,6 +123,6 @@
     <!-- Notification container - se añade dinámicamente cuando hay notificaciones -->
     <script src="../js/base.js"></script>
     <script src="../js/listar-jugadores.js"></script>
-    <script src="../js/formulario-jugadores.js"></script>
+    <script src="../js/crear-jugadores.js"></script>
 </body>
 </html>
