--- a/refereezy-website/frontend/pages/login.html
+++ b/refereezy-website/frontend/pages/login.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión - RefereeZY</title>
-    <link rel="stylesheet" href="frontend/style/base.css">
-    <link rel="stylesheet" href="frontend/style/login.css">
+    <link rel="stylesheet" href="../style/base.css">
+    <link rel="stylesheet" href="../style/login.css">
 </head>
 <body>
     <div class="min-h-screen">
@@ -55,7 +55,7 @@
             </div>
         </main>
     </div>
-    <script src="frontend/js/base.js"></script>
-    <script src="frontend/js/login.js"></script>
+    <script src="../js/base.js"></script>
+    <script src="../js/login.js"></script>
 </body>
 </html>
