--- a/refereezy-website/frontend/pages/planes.html
+++ b/refereezy-website/frontend/pages/planes.html
@@ -21,7 +21,7 @@
                     <div class="nav-links">
                         <a href="../../index.html" class="nav-item">Inicio</a>
                         <a href="planes.html" class="nav-item">Planes</a>
-                        <button class="login-button" onclick="window.location.href='../../login.html'">Account</button>
+                        <button class="login-button" onclick="window.location.href='./login.html'">Account</button>
                     </div>
                 </div>
             </div>
