--- a/refereezy-website/index.html
+++ b/refereezy-website/index.html
@@ -24,7 +24,7 @@
                     <div class="nav-links">
                         <a id="inicio" href="index.html" class="nav-item">Inicio</a>
                         <a href="./frontend/pages/planes.html" class="nav-item">Planes</a>
-                        <button class="login-button" onclick="window.location.href='login.html'">Iniciar sesión</button>
+                        <button class="login-button" onclick="window.location.href='./frontend/pages/login.html'">Iniciar sesión</button>
                     </div>
                 </div>
             </div>
@@ -47,7 +47,6 @@
             </div>
         </main>
     </div>
-    <script src="frontend/js/base.js"></script>
     <script src="frontend/js/index.js"></script>
 </body>
 </html>
