--- a/refereezy-website/frontend/pages/equipos.html
+++ b/refereezy-website/frontend/pages/equipos.html
@@ -110,6 +110,6 @@
     </div>
     <script src="../js/base.js"></script>
     <script src="../js/listar-equipos.js"></script>
-    <script src="../js/formulario-equipos.js"></script>
+    <script src="../js/crear-equipos.js"></script>
 </body>
 </html>
