Matches page got big changes. Implemented a different way of filtering the matches. Now the selection of teams and referees can be done by typing their names. Now you can search the referee in the filter by their name or ID (DNI). The matches can be filtered by both teams without caring if its local or visitor. Changed a bit the styling of the nav bar and some stuff in the base.js
Im planning to add some info in the index.html, dashboard.html and plans.html.

--- a/refereezy-website/frontend/pages/dashboard.html
+++ b/refereezy-website/frontend/pages/dashboard.html
@@ -30,7 +30,7 @@
     </div>
 </nav>
 
-  <main class="dashboard-main">
+  <main class="min-h-screen dashboard-main">
     <h1>👋 Bienvenido a tu Panel de Control</h1>
     <p>Selecciona una sección en el menú para empezar.</p>
   </main>
