--- a/refereezy-website/index.html
+++ b/refereezy-website/index.html
@@ -47,6 +47,7 @@
             </div>
         </main>
     </div>
+    <script src="frontend/js/base.js"></script>
     <script src="frontend/js/index.js"></script>
 </body>
 </html>
