--- a/refereezy-website/frontend/pages/jugadores.html
+++ b/refereezy-website/frontend/pages/jugadores.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="../style/jugadores.css">
 </head>
 <body>
-    <div class="min-h-screen">
-        <!-- Navigation -->
+    <div class="min-h-screen">        <!-- Navigation -->
         <nav class="nav-bar">
             <div class="nav-container">
                 <div class="nav-content">
@@ -25,10 +24,29 @@
                           <li><a href="./planes.html">Planes</a></li>
                           <li><a href="#" onclick="logout()">Cerrar sesión</a></li>
                         </ul>
+                        
+                        <!-- Hamburger Menu for Mobile -->
+                        <div class="hamburger-menu">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
                     </nav>
                 </div>
             </div>
         </nav>
+        
+        <!-- Mobile Navigation Menu -->
+        <div class="mobile-nav">
+            <ul class="mobile-nav-links">
+                <li><a href="./equipos.html">Equipos</a></li>
+                <li><a href="./jugadores.html">Jugadores</a></li>
+                <li><a href="./arbitros.html">Árbitros</a></li>
+                <li><a href="./partidos.html">Partidos</a></li>
+                <li><a href="./planes.html">Planes</a></li>
+                <li><a href="#" onclick="logout()">Cerrar sesión</a></li>
+            </ul>
+        </div>
 
         <!-- Gestión de Jugadores Section -->
         <main class="players-section">
@@ -120,9 +138,9 @@
         </div>
     </div>
 
-    <!-- Notification container - se añade dinámicamente cuando hay notificaciones -->
-    <script src="../js/base.js"></script>
+    <!-- Notification container - se añade dinámicamente cuando hay notificaciones -->    <script src="../js/base.js"></script>
     <script src="../js/listar-jugadores.js"></script>
     <script src="../js/crear-jugadores.js"></script>
+    <script src="../js/menu.js"></script>
 </body>
 </html>
