--- a/refereezy-website/frontend/pages/planes.html
+++ b/refereezy-website/frontend/pages/planes.html
@@ -14,9 +14,8 @@
             <div class="nav-container">
                 <div class="nav-content">
                     <!-- Logo -->
-                    <div class="logo-container">
-                        <img src="https://i.postimg.cc/pXQNYB7R/4-sinfondo.png" alt="Refereezy Digital Sport" class="logo" >
-                    </div>
+                    
+                  <div class="nav-logo">Refereezy ⚽</div>
                     
                     <!-- Navigation Links -->
                     <div class="nav-links">
