--- a/refereezy-website/frontend/pages/partidos.html
+++ b/refereezy-website/frontend/pages/partidos.html
@@ -14,9 +14,8 @@
                 <div class="nav-content">
                     <!-- Navigation Links -->
                     <nav class="dashboard-nav">
-                        <div class="nav-logo"><div class="logo-container">
-                            <img src="https://i.postimg.cc/pXQNYB7R/4-sinfondo.png" alt="Refereezy Digital Sport" class="logo" >
-                        </div></div>
+                        
+                        <div class="nav-logo">Refereezy ⚽</div>
                         <ul class="nav-links">
                           <li><a href="./equipos.html">Equipos</a></li>
                           <li><a href="./jugadores.html">Jugadores</a></li>
