Changed styling for live web

--- a/APPS/web/src/public/reports.html
+++ b/APPS/web/src/public/reports.html
@@ -3,26 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Refereezy Match Reports</title>
+  <title>Refereezy - Match Reports</title>
   <link rel="stylesheet" href="styles/reports.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
   <header class="main-header">
     <div class="container">
-      <h1><i class="fas fa-whistle"></i> Refereezy Match Reports</h1>
+      <h1><i class="fas fa-futbol"></i> Refereezy</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Clock Code Manager</a></li>
-          <li><a href="testing.html">Testing</a></li>
-          <li class="active"><a href="reports.html">Reports</a></li>
+          <li><a href="index.html">Dashboard</a></li>
+          <li><a href="testing.html">Testing Console</a></li>
+          <li class="active"><a href="reports.html">Match Reports</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <main class="container">
-    <section class="reports-list-section">
+    <section class="section reports-list-section">
       <header class="section-header">
         <h2>Recent Match Reports</h2>
         <div class="filter-controls">
